// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseNode variants (REQ-9.4) > renders known variant with a title row (bg-surface) 1`] = `
<div>
  <section
    class="neu-raised border-border min-w-[120px] rounded-lg border bg-surface text-on-surface px-3 py-2 text-left"
    data-node-id="n1"
    data-variant="known"
  >
    <div
      class="font-mono font-medium text-sm"
    >
      CPSC 221
    </div>
    <div
      class="border-border border-t leading-snug mt-1.5 pt-1.5 text-xs"
    >
      Basic Algorithms and Data Structures
    </div>
  </section>
</div>
`;

exports[`CourseNode variants (REQ-9.4) > renders note variant with text prose (bg-surface-container-low text-muted) 1`] = `
<div>
  <section
    class="neu-raised border-border min-w-[120px] rounded-lg border bg-surface-container-low text-muted italic px-3 py-2 text-left"
    data-node-id="n1"
    data-variant="note"
  >
    <div
      class="text-xs leading-snug"
    >
      Third-year standing
    </div>
  </section>
</div>
`;

exports[`CourseNode variants (REQ-9.4) > renders root labels on the documented in-app type ramp 1`] = `
<div>
  <section
    class="neu-raised border-border min-w-[120px] rounded-lg border bg-primary-container text-on-primary-container px-4 py-3 text-center"
    data-node-id="n1"
    data-variant="root"
  >
    <div
      class="text-xs font-medium tracking-[0.05em] uppercase opacity-70"
    >
      ROOT
    </div>
    <div
      class="font-mono font-medium text-xl"
    >
      CPSC 320
    </div>
    <div
      class="border-border border-t leading-snug mt-2 pt-2 text-base"
    >
      Intermediate Algorithm Design and Analysis
    </div>
  </section>
</div>
`;

exports[`CourseNode variants (REQ-9.4) > renders unknown variant with the (not in calendar) title (bg-error-container) 1`] = `
<div>
  <section
    class="neu-raised border-border min-w-[120px] rounded-lg border bg-error-container text-on-error-container px-3 py-2 text-left"
    data-node-id="n1"
    data-variant="unknown"
  >
    <div
      class="font-mono font-medium text-sm"
    >
      CALC 12
    </div>
    <div
      class="border-border border-t leading-snug mt-1.5 pt-1.5 text-xs"
    >
      (not in calendar)
    </div>
  </section>
</div>
`;
